# wwwroot/swagger/v1/swagger.json
@@ -516,6 +516,23 @@
           }
         }
       }
+    },
+    "/": {
+      "delete": {
+        "tags": [
+          "Topic"
+        ],
+        "operationId": "Topic_Delete",
+        "responses": {
+          "200": {
+            "x-nullable": true,
+            "description": "",
+            "schema": {
+              "type": "file"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
